2007-09-27  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.Core.Gui.mdp: Remove duplicate gtk-sharp reference.
	* MonoDevelop.Core.Gui.Dialogs/MultiTaskProgressDialog.cs,
	  gtk-gui/MonoDevelop.Core.Gui.Dialogs.MultiTaskProgressDialog.cs,
	  gtk-gui/gui.stetic: Juggle some close/cancel event handling.
	* MonoDevelop.Core.Gui/MessageService.cs: Add a method for showing custom
	  GTK dialogs types in the GUI thread.

2007-09-27  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.Core.Gui.mdp, Makefile.am: Updated.
	* MonoDevelop.Core.Gui.Dialogs/MultiTaskProgressDialog.cs, gtk-gui,
	  gtk-gui/generated.cs,
	  gtk-gui/MonoDevelop.Core.Gui.Dialogs.MultiTaskProgressDialog.cs,
	  gtk-gui/gui.stetic,
	  MonoDevelop.Core.Gui.ProgressMonitoring/MultiTaskDialogProgressMonitor.cs:
	  New IProgressMonitor that shows a GUI for multiple tasks.

2007-09-26  Lluis Sanchez Gual <lluis@novell.com> 

	* icons/Icons.SharpDevelopIcon, icons/Icons.SharpDevelopIcon-22.png: New
	  logo.

2007-09-21  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Core.Gui.addin.xml: Bump MD version.

2007-09-05  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.Core.Gui/IMementoCapable.cs: Fix build.

2007-09-04  Michael Hutchinson <MHutchinson@novell.com>

	* MonoDevelop.Core.Gui.Dialogs/WizardDialog.cs,
	  MonoDevelop.Core.Gui.Dialogs/CurrentPanelPanel.cs,
	  MonoDevelop.Core.Gui.Dialogs/StatusPanel.cs,
	  MonoDevelop.Core.Gui.Dialogs/TreeViewOptions.cs,
	  MonoDevelop.Core.Gui.Components/FileBrowser.cs,
	  MonoDevelop.Core.Gui/RecentOpen.cs,
	  MonoDevelop.Core.Gui/MessageService.cs,
	  MonoDevelop.Core.Gui/ResourceService.cs: Remove some warnings.

2007-08-31  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Core.Gui.Dialogs/WizardDialog.cs,
	  MonoDevelop.Core.Gui.Dialogs/CurrentPanelPanel.cs,
	  MonoDevelop.Core.Gui.Dialogs/DefaultDialogPanelDescriptor.cs,
	  MonoDevelop.Core.Gui.Dialogs/StatusPanel.cs,
	  MonoDevelop.Core.Gui.Dialogs/TreeViewOptions.cs,